fixes in logic - delay gap

--- a/learn-angular/src/user/user-profile.component.css
+++ b/learn-angular/src/user/user-profile.component.css
@@ -63,3 +63,10 @@
 .transaction-amount{
     font-weight: bold;
 }
+
+#transaction-error{
+    color: red;
+    font-size: 15px;
+    text-align: center;
+    align-self: center;
+}
